--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "weather-cli",
   "version": "1.0.0",
-  "private": false,
   "description": "CLI for getting weather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather:": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +23,10 @@
   },
   "bugs": {
     "email": "yl30042004@gmail.com"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
